# OG-file-manager

./: Cargo.toml  README.md
src/: app.rs  desktop.rs  filesystem.rs  main.rs
src/panes/: filelist.rs  mod.rs  sidebar.rs  toolbar.rs
