[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file-manager"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "advanced", "tokio", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
libc = "0.2.186"
image = "0.24"
kamadak-exif = "0.5"
tokio = { version = "1.52.3", features = ["rt"] }
